--- a/css/blog.css
+++ b/css/blog.css
@@ -63,3 +63,17 @@ body{
         padding-left: 20px;
       }
   }
+
+  @media screen and (min-width: 1000px) {
+    .leftcolumn {
+        float: left;
+        width: 50%;
+      }
+      
+      /* Right column */
+      .rightcolumn {
+        float: left;
+        width: 50%;
+        padding-left: 20px;
+      }
+  }
