--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
   }
   
   header{
-    border-bottom: 3px solid #50C7C7;
+    border-bottom: 3px solid navy;
     margin-bottom:20px;
     background: white;
     display:flex;
